style(demo/select): fix overflow when selecting large options

--- a/apps/demo/src/assets/css/demo.css
+++ b/apps/demo/src/assets/css/demo.css
@@ -30,7 +30,8 @@
 }
 
 .demo-section .demo-section-content {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 1.5rem;
 }
 
